--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  get: ^4.7.2
+  http: ^1.4.0
+  shared_preferences: ^2.5.3
+  iconsax: ^0.0.8
 
 dev_dependencies:
   flutter_test:
